<?xml version="1.0"?>
<package>
  <name>param_tester</name>
  <version>0.0.0</version>
  <description>The param_tester package</description>

  <maintainer email="alanm@roshub.io">Alan Meekins</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>

  </export>
</package>
